RESOLVED FIXED198069
Undefined reference platformCloseFrontendPageAndWindow() linking against libWPEWebKit-1.0.so after r245536
https://bugs.webkit.org/show_bug.cgi?id=198069
Summary Undefined reference platformCloseFrontendPageAndWindow() linking against libW...
Pablo Saavedra
Reported 2019-05-21 02:51:57 PDT
Undefined reference platformCloseFrontendPageAndWindow() linking against libWPEWebKit-1.0.so after r245536 I got this linking time issue trying to build Cog (the reference browser for WPE in meta-webkit - https://github.com/Igalia/cog) against the latest master: ``` libWPEWebKit-1.0.so: undefined reference to `WebKit::RemoteWebInspectorProxy::platformCloseFrontendPageAndWindow()' ``` The issues was introduced in [WinCairo] Implement Remote Web Inspector Client. https://bugs.webkit.org/show_bug.cgi?id=197434 The WPE platform still needs a dummy definition of `WebPageProxy* RemoteWebInspectorProxy::platformCreateFrontendPageAndWindow()` Uploaded a patch with a proposal for change
Attachments
patch (1.31 KB, patch)
2019-05-21 02:54 PDT, Pablo Saavedra
no flags
Pablo Saavedra
Comment 1 2019-05-21 02:54:40 PDT
Ross Kirsling
Comment 2 2019-05-21 08:22:00 PDT
Comment on attachment 370306 [details] patch Thanks -- sorry for the trouble!
WebKit Commit Bot
Comment 3 2019-05-21 10:57:50 PDT
Comment on attachment 370306 [details] patch Clearing flags on attachment: 370306 Committed r245587: <https://trac.webkit.org/changeset/245587>
WebKit Commit Bot
Comment 4 2019-05-21 10:57:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-05-21 11:00:38 PDT
Note You need to log in before you can comment on or make changes to this bug.