Undefined reference platformCloseFrontendPageAndWindow() linking against libWPEWebKit-1.0.so after r245536 https://bugs.webkit.org/show_bug.cgi?id=198069

Reviewed by Ross Kirsling.

* UIProcess/RemoteWebInspectorProxy.cpp:


Canonical link: https://commits.webkit.org/212166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245587 268f45cc-cd09-0410-ab3c-d52691b4dbfc